# PokedipAI

./: .gitignore  CMakeLists.txt  README.md  compute.glsl  main.cpp  nn.cpp  nn.hpp
